chore(build): publish also on dockerhub

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,8 @@ on:
 env:
   DOCKER_FILE_PATH: .
   IMAGE: "ghcr.io/${{ github.repository }}"
+  DOCKERHUB_ORG: elpaasoci
+
 jobs:
   build_and_publish:
     name: build and publish
@@ -22,13 +24,24 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     -
+      name: Login to DockerHub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+    -
       name: Login to GitHub Container Registry
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-        
+    -
+      name: extract github repo name
+      id: gh-repo-name
+      run: |
+        echo "OCI_IMAGE=$(basename ${{ github.repository }})" >> $GITHUB_ENV
+      shell: bash
     -
       name: publish image
       uses: docker/build-push-action@v5.1.0
@@ -36,6 +49,8 @@ jobs:
         context: ${{env.DOCKER_FILE_PATH}}
         push: true
         tags: |
+          ${{env.DOCKERHUB_ORG}}/${{env.OCI_IMAGE}}:latest
+          ${{env.DOCKERHUB_ORG}}/${{env.OCI_IMAGE}}:${{github.sha}}
           ${{ env.IMAGE}}:latest
           ${{ env.IMAGE}}:${{github.sha}}
     -
@@ -46,4 +61,5 @@ jobs:
         push: true
         context: ${{ env.DOCKER_FILE_PATH }}
         tags: |
-          ${{ env.IMAGE}}:${{github.ref_name}}
+          ${{env.DOCKERHUB_ORG}}/${{env.OCI_IMAGE}}:${{github.ref_name}}
+          ${{env.IMAGE}}:${{github.ref_name}}
